--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ agp = "8.3.1"
 credentials = "1.2.2"
 dexter = "6.2.3"
 exoplayer = "2.17.1"
+glide = "4.16.0"
 googleid = "1.1.1"
 gson = "2.10.1"
 jna = "5.13.0@aar"
@@ -43,6 +44,7 @@ converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref
 converter-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "retrofitVersion" }
 dexter = { module = "com.karumi:dexter", version.ref = "dexter" }
 exoplayer = { module = "com.google.android.exoplayer:exoplayer", version.ref = "exoplayer" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 googleid = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "googleid" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 jna = { module = "net.java.dev.jna:jna", version.ref = "jna" }
